# Web-Rust-Svelte

./: .gitignore  README.md
rust-project/: Cargo.toml
rust-project/src/: lib.rs
svelte-project/: package.json  rollup.config.js
svelte-project/src/: App.svelte  Persons.svelte  main.js
