[package]
name = "rusty-svelte"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
state = { version = "0.5", features = ["tls"] }
lazy_static = "1.4"
serde_derive = "^1.0.59"
js-sys = "0.3.36"
console_error_panic_hook = "0.1"
once_cell = "1.10"
wasm-bindgen-futures = "0"
reqwest = "0"
reqwest-wasm = "0"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"